--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1881,3 +1881,10 @@ lts.fzu.cz/pdf/d-js.pdf
   journal={arXiv preprint arXiv:1108.2203},
   year={2011}
 }
+@article{hill2013uncertainty,
+  title={The uncertainty principle for Fourier transforms on the real line},
+  author={Hill, Mitch},
+  year={2013}
+}
+
+
