--- a/theory.tex
+++ b/theory.tex
@@ -1,6 +1,5 @@
 %% Things to be optionally fixed:
 %% *  fix that f is used as frequency (replace with omega) and also as arbitrary function f(t) 
-%% *  fix that T is transverse-field operator and integrated time
 %% *  get rid of the term "response function" for susceptibility
 %% *  ensure more consistent usage of "dispersion curve", "dispersion relation" and "solution of Maxwell equations"
 
@@ -484,7 +483,7 @@ The Maxwell equations (\ref{eq_me1}-\ref{eq_me4}) however still hold when these 
 $$ \mu_0 \HHsd = \B. $$
 
 The advantage is that the relative magnetic permeability is defined as a mere constant of the magnetic response of vacuum $\muLL(\omega, \kk) := 1$, thus reducing the complexity of the computation compared to the symmetric spatial-dispersive model. %% [as in Eq. (\ref{eq_ce})]
-Therefore, the \textit{Landau-Lifshitz} model developed below is also denoted as the $\E\D\B$-model, \add{since it allows to write the Maxwell equations without explicit use for the magnetic field $\HH$.  }
+Therefore, the \textit{Landau-Lifshitz} model developed below is also denoted as the $\E\D\B$-model, since it allows the substitution into the Maxwell equations to avoid explicit use of the magnetic field $\HH$.
 
 %}}}
 \paragraph{Local medium in the Landau-Lifshitz model} %{{{
@@ -520,7 +519,7 @@ The new electric displacement $\Dsd$ in the  Landau-Lifshitz model, that also ac
 By means of the other Maxwell equation (\ref{eq_me3}), the magnetic induction $\B$ can be substituted by $\kk\times\E / \omega$ to obtain an expression that contains the electric quantities only.
 \begin{equation} \Dsd = \D - \frac{1}{\omega^2 \mu_0}\left(1 - \frac{1}{\murl(\omega)}\right) \kk\times(\kk\times \E).  \label{eq_Dsd3}\end{equation} 
 Double vector multiplication on the right hand side can be identified with the wave-plane projection tensor $\TT$, c.f. Eqs. (\ref{eq_rotrot}, \ref{eq_transverse1}):
-\begin{equation} \Dsd = \D + \frac{k^2}{\omega^2 \mu_0}\left(1 - \frac{1}{\murl(\omega)}\right) \, T \E,  \label{eq_Dsd4}\end{equation} 
+\begin{equation} \Dsd = \D + \frac{k^2}{\omega^2 \mu_0}\left(1 - \frac{1}{\murl(\omega)}\right) \, \TT \E,  \label{eq_Dsd4}\end{equation} 
 
 %}}}
 \paragraph{Tensor form of the Landau-Lifshitz permittivity of local isotropic media}%{{{
@@ -546,7 +545,7 @@ where
 \paragraph{Other formulations}%{{{
 Let us note that the classical approach using symmetric parameters $\epsrl(\omega,\kk),\murl(\omega,\kk)$, and the Landau-Lifshitz approach of gathering all medium-related effects in the permittivity $\epsLL(\omega,\kk)$ are only two examples of all possible transformations of medium parameters that keep the Maxwell equations unchanged. 
 
-Formally, it is possible to arbitrarily distribute the medium electric and magnetic responses between these parameters. The distribution weight may be even frequency dependent, leading to a physically realistic pair of parameters with uncommon spectral shape \cite{skaar2014diamagnetism}.
+Formally, it is possible to arbitrarily distribute the medium electric and magnetic responses between these parameters. The distribution weight may be even frequency dependent, leading to a physically realistic pair of parameters with custom spectral shape \cite{skaar2014diamagnetism}.
 % todo "Casimir" formulation of electrodynamics \cite{vinogradov2002form}
 %% TODO REF EBD theory and nonlocal electrodynamics %% \cite{krowne2007book_agran} %% \cite{landau1984electrodynamics} %% \cite{mikki2009electromagnetic}
 %}}}
@@ -555,10 +554,10 @@ Formally, it is possible to arbitrarily distribute the medium electric and magne
 \paragraph{Dispersion relation as an implicit equation} %{{{
 In the dispersion relation for local media, Eq. (\ref{eq_dispdet}), the wave vector could be found by solving a set of linear equations. In the particular case of \textit{isotropic} local media, the computation has an even simpler form of an explicit computation of one square root, see Eq. (\ref{eq_dispeq_loc}).
 
-An intrinsic issue of spatial-dispersive media is that the permittivity $\epsLL(\omega,\kk)$ is a function of the wavevector $\kk$ on its own. The dispersion equation then becomes an implicit equation: 
+An intrinsic issue of spatial-dispersive media is that the permittivity $\epsLL(\omega,\kk)$ is a function of the wavevector $\kk$ on its own. The dispersion equation then becomes an implicit equation similar to Eq. (\ref{eq_dispdet}), but now with $\epsLL$ dependent on $\kk$: 
 \begin{equation} 
 \det\left[
-T -
+\TT -
 	\frac{\mu_0 \varepsilon_0 \omega^2}{k^2}
 	\left(\begin{array}{ccc} 
 	{\epsLL}_{11}(\omega,\kk) & {\epsLL}_{21}(\omega,\kk) & {\epsLL}_{31}(\omega,\kk)  \\
@@ -590,7 +589,7 @@ exists due to $\epsLL(\omega, k)$ being negative, and finally the upper polarito
 
 A local medium with a single \textit{magnetic} resonance, Fig. \ref{fg_dcll}b, is predicted by the symmetric model to exhibit similar dispersion curves. In the right panel of Fig. \ref{fg_dcll}b, the magnetic resonance is represented by the
 contribution that grows proportionally with $k^2$: 
-\begin{equation} \Dsd = \D + \underbrace{\frac{k^2}{\omega^2 \mu_0}\left(1 - \frac{1}{\murl(\omega)}\right) \, T \E}_{\text{magnetic contribution}},      \tag{\ref{eq_Dsd4} \again} \end{equation}
+\begin{equation} \Dsd = \D + \underbrace{\frac{k^2}{\omega^2 \mu_0}\left(1 - \frac{1}{\murl(\omega)}\right) \, \TT \E}_{\text{magnetic contribution}},      \tag{\ref{eq_Dsd4} \again} \end{equation}
 % TODO FK: Nějak to tam nevidím. To jako pro ω/ω0> 1.3? Chtělo by to popsat nějak názorněji.
 and unlike the case of the electric resonance, the maximum magnitude of the magnetic contribution is located at the frequency $\omega_{mp}$ where $\murl(\omega_{mp}) \rightarrow 0$. In the plot \ref{fg_dcll}b, this is at $\omega/\omega_0 \approx 1.3$.
 % TODO FK: Ani tady se mi nezdá zjevné, kde je tato podmínka splněna.
@@ -664,7 +663,7 @@ If the incidence is not perpendicular, the complex amplitudes of the reflected a
 
 \add{
 Extending the notion of impedance to spatial-dispersive media to compute the  amplitudes. 
-The reason lies in the spatial-dispersive media always being assumed infinite, so their interfaces are not accounted for in the model. If such an extension would be done, the spatial integral in Eq. \ref{eq_eq_chi_convol_nonloc} would have to be better specified, either with the nonlocal response of medium to extend also behind the interface. Alternatively, the medium response could be sharply truncated at the interface.
+The reason lies in the spatial-dispersive media always being assumed infinite, so their interfaces are not accounted for in the model. If such an extension would be done, the spatial integral in Eq. \ref{eq_chi_convol_nonloc} would have to be better specified, either with the nonlocal response of medium to extend also behind the interface. Alternatively, the medium response could be sharply truncated at the interface.
 }
 
 \todo{add from \cite{golubkov1995boundary}}
@@ -720,7 +719,8 @@ Negative group velocity has been experimentally observed in a thin sample. It ma
 The notion of \textit{signal} or \textit{information propagation velocity} is sometimes % TODO cite
 identified with the group velocity, $\vg$. However, this may be misleading, as the differential definition of the group velocity in Eq. (\ref{eq_vg}) enables one to define it for slow-enough modulation only, so that the span of frequencies is narrow and the second derivative, corresponding to the group velocity dispersion, can be neglected.
 
-Assuming the information is carried by a wave modulation that is limited in time (e. g. presence or absence of an optical pulse), one leaves the comfortable approximation of narrow spectrum: from the convolution-multiplication theorem already used in Eq. (\ref{eq_kkresult}), it can be shown that any information carrying function with a finite support has to span over an infinite spectrum. The proof can be drawn along the line of under multiplication by some finite-supported binary functions, e.g., $$ f(t) \rightarrow f(t) \cdot \mathrm{sign}^2[f(t)], $$
+Assuming the information is carried by a wave modulation that is limited in time (e. g. presence or absence of an optical pulse), one leaves the comfortable approximation of narrow spectrum: from the convolution-multiplication theorem already used in Eq. (\ref{eq_kkresult}), it can be shown that any information carrying function with a finite support has to span over an infinite spectrum. The proof \cite{hill2013uncertainty} can be drawn along the line of that under multiplication by some finite-supported binary functions, e.g., 
+$$ f(t) \rightarrow f(t) \cdot \mathrm{sign}^2[f(t)], $$
 the original function does not change.
 
 A temporally limited optical pulse will be always more or less distorted upon propagation in dispersive medium where the dispersion curves are not straight. Then the information velocity becomes a problematic term. If the information can be detected exactly in the first moment when the fields deviate from strict zero, one comes to the surprising conclusion that, in dispersive media, the information propagates probably with the speed of light. In the opposite example of a highly noisy channel, the pulse may be reliably detected only after most its energy already arrived. To conclude, the author is convinced that the notion of \textit{information velocity} is too vague unless its exact definition is provided first, and should not be directly associated with the group velocity. 
@@ -1022,7 +1022,8 @@ It is important that these particles are small and close to each other compared 
 
 Periodic structures can similarly exhibit a resonance confined in the unit cell. To the author's knowledge, every possible shape formed from a dielectric or metal has infinitely many resonance modes, characteristic by relatively high concentration of energy in the structure, or near to it, and relatively weak coupling to the incident electromagnetic wave. Arranging such resonant elements into the lattice is a fundamental step in building a periodic structure with resonant behaviour. In such structures, the dispersion for the Bloch wave follows a resonance curve similar (but not the same) as in Fig. \ref{fg_oscillator_spectrum}. Sometimes the behaviour of the Bloch wave is described as \textit{macroscopic}, while the fields localized in the resonant elements as \textit{mesoscopic} \cite{felbacq2005theory}, and the word \textit{microscopic} is left for the much finer fields in the constituent atoms or molecules.
 
-Another important characteristic of individual resonances is that when the frequency is changed between the lower and upper edge of the band-gap, some internal change of the response happens. This is true for natural media as well as for lattices of individual resonators. Typically, at the lower band-gap edge, the dipoles are \textit{in-phase} with the wave, whereas at the upper edge, they are \textit{in counter-phase}. Inside the bandgap, usually closer to the lower frequency edge, a resonance frequency is located (c.f. Fig. \ref{fg_oscillator_spectrum}).
+Another important characteristic of individual resonances is that when the frequency is changed between the lower and upper edge of the band-gap, some internal change of the response happens. This is true for natural media as well as for lattices of individual resonators. Typically, at the lower band-gap edge, the dipoles are \textit{in-phase} with the wave, whereas at the upper edge, they are \textit{in counter-phase}.  % TODO note also that these indiv resonances are typical by a resonance shape in the permitivity
+Inside the bandgap, usually closer to the lower frequency edge, a resonance frequency is located (c.f. Fig. \ref{fg_oscillator_spectrum}).
 
 Yet another characteristic is that the resonant interaction of a particle with the wave can be approximated as a point dipole or multipole. As is dictated by the symmetry of the resonant field in the particle, the dipole may be either electric or magnetic. Usually, a particle has multiple resonances of electric or magnetic type at different frequencies. In particles of lower symmetry, one resonant mode may interact both ways simultaneously; this leads to optical activity. 
 Other resonances have no dipole, again due to the symmetry. Their interaction with the field is mediated by the electric or magnetic quadrupole moment (or even higher multipole \cite{merlin2009metamaterials}) and is usually weak, however it grows with the wavenumber $k$. Such multipole moments often complement dipole resonances, and are responsible for spatial dispersion, see Chapter \ref{chap_sd}. %% TODO this should be moved elsewhere...
@@ -1030,7 +1031,12 @@ Other resonances have no dipole, again due to the symmetry. Their interaction wi
 
 %}}}
 \paragraph{Bragg band-gaps}%{{{ TODO
-A different class of band-gaps is formed 
+A different class of band-gaps, denoted also as \textit{photonic band-gaps}, or PBG, is formed exclusively in periodic structures, whenever there are two different solutions at the same wavevector. % They are typical by 
+At the band boundaries where $K=m\pi/a, m\in \mathbb Z$, all cells have the same field shape (except possibly for the sign), and correspondingly nodal planes/surfaces can be identified in the unit cell and 
+Photonic band-gaps are fundamentally different the band gaps arising from the individual resonances, and arae characteristic by not reducing the number of nodal planes 
+
+The scenario of a wave being reflected from a structure having a photonic band-gap can be intuitively explained as the partial waves reflected from the elements being all nearly in phase, thus amplifying the reflected wave.
+%% TODO put this into the Result section?
 
 In contrast with the individual resonance, the behaviour of the structure does not fundamentally change between the lower and upper band-gap edge. The difference can however be always found in the location of the \textit{nodal planes}. 
 %  \cite{johnson2003introduction}
@@ -1049,9 +1055,7 @@ In contrast with the individual resonance, the behaviour of the structure does n
 
 % Beam propagation in periodic planar waveguides \cite{zengerle1987light}
 
-at the same wavevector there are two different solutions - there are frequencies where no wave propagates - nodal planes/surfaces can be identified at the PBG boundaries as K=m.2pi/a and all cells have the same field shape except for the sign
 
-photonic band-gaps are new compared to the band gaps arising from permittivity/permeabiliyt resonances, and arae characteristic by not reducing the number of nodal planes 
 
 
 % -> Field shape: concept of nodal planes (or, more precisely, surfaces)
