--- a/expe.tex
+++ b/expe.tex
@@ -146,7 +146,7 @@ The key advantages of this novel approach are the following:
  \item{The upward air pressure pulls out particles that got stuck in the sieve in every period of acoustic vibration. This resolves the major issue of the previous prototype.} 
  \item{Avoiding macroscopic vibrating parts, except the membrane of a small acoustic transducer, allows the device to operate over multiple days without the risk of mechanical failure of any part.}
  \end{enumerate}
-The outer tube acted as an acoustic resonator, greatly enhancing the effect of the sound when tuned to resonance around 750-900 Hz. These frequencies obviously correspond to the fundamental acoustic resonance, as the quarter-wavelength is the range from 91 to 110 mm. 
+The outer tube acted as an acoustic resonator, greatly enhancing the effect of the sound when tuned to resonance around 750-900 Hz. These frequencies obviously correspond to the fundamental acoustic resonance, as the quarter-wavelength is in the range from 91 to 110 mm. 
 
 %TODO The power of the sine wave feeding the device was limited by the parameters of the acoustic transducer
 A practical deficiency of this setup was that the upper opening of the transducer radiated relatively intense sound during operation. We resolved this potential issue by covering whole apparatus by a robust glass bell jar.
