--- a/theory.tex
+++ b/theory.tex
@@ -1031,35 +1031,26 @@ Other resonances have no dipole, again due to the symmetry. Their interaction wi
 
 %}}}
 \paragraph{Bragg band-gaps}%{{{ TODO
-A different class of band-gaps, denoted also as \textit{photonic band-gaps}, or PBG, is formed exclusively in periodic structures, whenever there are two different solutions at the same wavevector. % They are typical by 
-At the band boundaries where $K=m\pi/a, m\in \mathbb Z$, all cells have the same field shape (except possibly for the sign), and correspondingly nodal planes/surfaces can be identified in the unit cell and 
-Photonic band-gaps are fundamentally different the band gaps arising from the individual resonances, and arae characteristic by not reducing the number of nodal planes 
+Band-gaps of a different type, denoted as Bragg band-gaps or also as \textit{photonic band-gaps} (PBG), are observed exclusively in periodic structures when an integer number of half-waves fits into the unit cell. 
+In the above mentioned periodic lattice of isolated particles, the Bragg band-gap can therefore be understood as a resonance of the electromagnetic wave in the space \textit{between} the particles, in contrast with the individual resonances where most of the energy is localised \textit{inside} the particles -- or at least very close to them.
 
-The scenario of a wave being reflected from a structure having a photonic band-gap can be intuitively explained as the partial waves reflected from the elements being all nearly in phase, thus amplifying the reflected wave.
-%% TODO put this into the Result section?
+Along an axis of a cubic lattice, with unit cell size $a$, the rule for the Bragg band-gaps to be observed is particularly simple:
+\begin{equation} K= \frac{\pi m}{a}, m\in\mathbb{N}. \label{eq_braggbg}\end{equation}
+Thus, the first Bragg band-gap is observed in a periodic structure when the wavenumber $K$ reaches the $\mathbf X$, $\mathbf Y$ or $\mathbf Z$ points of the Brillouin zone.
+Intuitively it might appear that the requirement of exact equality in the expression (\ref{eq_braggbg}) should cause the Bragg band-gap to have zero width, but in fact the dispersion curves are bent in such a way that the band-gap covers a range of frequencies as in Figs. \ref{phdfolding}a and \ref{phdfolding}d.
 
-In contrast with the individual resonance, the behaviour of the structure does not fundamentally change between the lower and upper band-gap edge. The difference can however be always found in the location of the \textit{nodal planes}. 
-%  \cite{johnson2003introduction}
-%  Electromagnetic wave propagation in periodic media was first studied by
-%  Lord Rayleigh in 1887, in connection with the peculiar reflective properties of a
-%  crystalline mineral with periodic “twinning” planes (across which the dielectric
-%  tensor undergoes a mirror flip). These correspond to one-dimensional photonic
-%  crystals, and he identified the fact that they have a narrow band gap prohibiting
-%  light propagation through the planes. This band gap is angle-dependent
+The width of the band-gap depends on the scattering strength of the particles. The width can be analytically computed for a one-dimensional layered system \cite{laktionov2008} described by the transfer-matrix formalism. In the Results section, it is also shown that for a particular choice of parameters the width of the Bragg band-gap can vanish. 
+% -> zero-width case (it is a transition between a mode traversing from one photonic band to another --- TODO put into Results)
 
-
-% -> application of PBG, todo add references; formation: \cite{laktionov2008}
-% -> zero-width case, as a transition between a mode traversing from one photonic band to another
-% -> PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
-
-
-% Beam propagation in periodic planar waveguides \cite{zengerle1987light}
-
-
+In analogy with the solid-state physics, where the notion of band-gaps originates from, the Bragg band-gaps can be viewed as the \textit{direct} ones, as the dispersion curves at the lower and upper band-gap edges are at the same wavenumber $K$. In contrast, the individual resonances are analogous to the \textit{indirect} band-gaps, as the internal resonances also cause the 
+This difference arises from the fact that the behaviour of the structure does not fundamentally change between the lower and upper band-gap edge. The difference can however be always found in the location of the \textit{nodal planes}. 
 
 
 % -> Field shape: concept of nodal planes (or, more precisely, surfaces)
 % -> exponential wave decay with phase difference across the cell
+
+
+
 
 %}}}
 \paragraph{Other types of band-gaps}%{{{
@@ -1138,6 +1129,17 @@ In the author's opinion, a great conceptual breakthrough would be needed to over
 
 \subsection{Application of photonic crystals} 
 \paragraph{One-dimensional structures}%{{{
+\add{
+It was first studied by Lord Rayleigh in 1887 \cite{johnson2003introduction} in a laminar crystal composed of thin periodic layers of slightly different properties. The field at the lower  whenever there are two different solutions at the same wavevector. % They are typical by 
+At the band boundaries where $K=m\pi/a, m\in \mathbb Z$, all cells have the same field shape (except possibly for the sign), and correspondingly nodal planes/surfaces can be identified in the unit cell and 
+Photonic band-gaps are fundamentally different the band gaps arising from the individual resonances, and arae characteristic by not reducing the number of nodal planes 
+%  \cite{johnson2003introduction}
+%  Electromagnetic wave propagation in periodic media was first studied by Lord Rayleigh in 1887, in connection with the peculiar reflective properties of a
+%  crystalline mineral with periodic “twinning” planes (across which the dielectric tensor undergoes a mirror flip). These correspond to one-dimensional photonic
+%  crystals, and he identified the fact that they have a narrow band gap prohibiting light propagation through the planes. This band gap is angle-dependent
+
+application of PBG
+}
 
 %}}}
 \paragraph{Planar photonic band-gap structures}%{{{
@@ -1151,6 +1153,12 @@ In the author's opinion, a great conceptual breakthrough would be needed to over
 Magnetized PhCs with enhanced magneto-optic interaction for one-dimensional light propagation
 
 %}}}
+\paragraph{Planar photonic structures}
+Magnetized PhCs with enhanced magneto-optic interaction for one-dimensional light propagation
+
+% Beam propagation in periodic planar waveguides \cite{zengerle1987light}
+%}}}
+% -> PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
 
 \subsection{The boundary between metamaterials and photonic crystals} 
 \paragraph{Difference in the Bloch wavelength}%{{{
