--- a/theory.tex
+++ b/theory.tex
@@ -1044,16 +1044,12 @@ The width of the band-gap depends on the scattering strength of the particles. T
 
 In analogy with the solid-state physics, where the notion of band-gaps originates from, the Bragg band-gaps can be viewed as the \textit{direct} ones, as the dispersion curves at the lower and upper band-gap edges are at the same wavenumber $K$. In contrast, the individual resonances are analogous to the \textit{indirect} band-gaps, as the internal resonances also cause the 
 This difference arises from the fact that the behaviour of the structure does not fundamentally change between the lower and upper band-gap edge. The difference can however be always found in the location of the \textit{nodal planes}. 
-
-
 % -> Field shape: concept of nodal planes (or, more precisely, surfaces)
 % -> exponential wave decay with phase difference across the cell
 
-
-
-
 %}}}
 \paragraph{Other types of band-gaps}%{{{
+In the literature,  % XXX
 zero-average-index band gaps?
 
 %}}}
